# Kontinuum

./: .gitignore  CMakeLists.txt  README.md
TEST_DATABASE/: lessons.json  students.json  subject_results.json
demo/: main.cpp
include/: Lesson.h  Student.h
sources/: Student.cpp
